# DesktopFix

./: .gitignore  CMakeLists.txt  DesktopFix.sit  README.md  desktopfix.c  desktopfix.r
